--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -4,9 +4,19 @@
 %table#movies
   %thead
     %tr
-      %th Movie Title
+      -if flash[:sort]=="title"
+        %th.hilite
+          %a#title_header= link_to 'Movie Title', movies_path(:sort => "title")
+      -else
+        %th
+          %a#title_header= link_to 'Movie Title', movies_path(:sort => "title")
       %th Rating
-      %th Release Date
+      -if flash[:sort]=="release_date"
+        %th.hilite
+          %a#release_date_header= link_to 'Release Date', movies_path(:sort => "release_date")
+      -else
+        %th
+          %a#release_date_header= link_to 'Release Date', movies_path(:sort => "release_date")
       %th More Info
   %tbody
     - @movies.each do |movie|
