--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -1,22 +1,22 @@
 -#  This file is app/views/movies/index.html.haml
 %h1 All Movies
 
+- @all_ratings = ['G', 'PG', 'PG-13', 'R']
+= form_tag movies_path, :method => :get do
+  Include:
+  - @all_ratings.each do |rating|
+    = rating
+    = check_box_tag "ratings[#{rating}]"
+  = submit_tag 'Refresh'
+
 %table#movies
   %thead
     %tr
-      -if flash[:sort]=="title"
-        %th.hilite
-          %a#title_header= link_to 'Movie Title', movies_path(:sort => "title")
-      -else
-        %th
-          %a#title_header= link_to 'Movie Title', movies_path(:sort => "title")
+      %th{:class => if flash[:sort]=='title' then 'hilite' end}
+        %a= link_to 'Movie Title', movies_path(:sort => "title"), :id => "title_header"
       %th Rating
-      -if flash[:sort]=="release_date"
-        %th.hilite
-          %a#release_date_header= link_to 'Release Date', movies_path(:sort => "release_date")
-      -else
-        %th
-          %a#release_date_header= link_to 'Release Date', movies_path(:sort => "release_date")
+      %th{:class => if flash[:sort]=='release_date' then 'hilite' end}
+        %a= link_to 'Release Date', movies_path(:sort => "release_date"), :id => "release_date_header"
       %th More Info
   %tbody
     - @movies.each do |movie|
