--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -13,7 +13,7 @@
     %tr
       %th{:class => if flash[:sort]=='title' then 'hilite' end}
         %a= link_to 'Movie Title', movies_path(:sort => "title"), :id => "title_header"
-      %th Rating
+      %th#rating Rating
       %th{:class => if flash[:sort]=='release_date' then 'hilite' end}
         %a= link_to 'Release Date', movies_path(:sort => "release_date"), :id => "release_date_header"
       %th More Info
